// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My scenario 1 1`] = `
[
  "Player Mathieu has joined the game at place 0 with 0 point(s)",
  "Player Thomas has joined the game at place 0 with 0 point(s)",
  "Player Clément has joined the game at place 0 with 0 point(s)",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 1",
  "Science Question 0",
  "Player Mathieu + 1 point now at 1 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 1",
  "Science Question 1",
  "Player Thomas + 1 point now at 1 point(s)",
  "It is Clément's turn !",
  "player Clément has rolled 1 !",
  "player Clément is now at position 1",
  "Science Question 2",
  "Player Clément + 1 point now at 1 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 2",
  "Sports Question 0",
  "Player Mathieu + 1 point now at 2 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 2",
  "Sports Question 1",
  "Player Thomas + 1 point now at 2 point(s)",
  "It is Clément's turn !",
  "player Clément has rolled 1 !",
  "player Clément is now at position 2",
  "Sports Question 2",
  "Player Clément + 1 point now at 2 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 3",
  "Rock Question 0",
  "Player Mathieu + 1 point now at 3 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 3",
  "Rock Question 1",
  "Player Thomas + 1 point now at 3 point(s)",
  "It is Clément's turn !",
]
`;

exports[`My scenario 2 1`] = `
[
  "Player Mathieu has joined the game at place 0 with 0 point(s)",
  "Player Thomas has joined the game at place 0 with 0 point(s)",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 1",
  "Science Question 0",
  "Player Mathieu + 1 point now at 1 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 1",
  "Science Question 1",
  "Player Thomas has answered wrongly",
  "player Thomas goes in penalty box !",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 2 !",
  "player Mathieu is now at position 3",
  "Rock Question 0",
  "Player Mathieu + 1 point now at 2 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas goes out of penalty box ",
  "player Thomas is now at position 2",
  "Sports Question 0",
  "Player Thomas has answered wrongly",
  "player Thomas goes in penalty box !",
  "It is Mathieu's turn !",
]
`;

exports[`My scenario 3 1`] = `
[
  "Player Mathieu has joined the game at place 0 with 0 point(s)",
  "Player Thomas has joined the game at place 0 with 0 point(s)",
  "player Mathieu has rolled 12 !",
  "player Mathieu is now at position 0",
  "Pop Question 0",
  "Player Mathieu has answered wrongly",
  "player Mathieu goes in penalty box !",
  "It is Thomas's turn !",
  "player Thomas has rolled 3 !",
  "player Thomas is now at position 3",
  "Rock Question 0",
  "Player Thomas has answered wrongly",
  "player Thomas goes in penalty box !",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 2 !",
  "player Mathieu stays in penalty box",
  "It is Thomas's turn !",
  "player Thomas has rolled 9 !",
  "player Thomas goes out of penalty box ",
  "player Thomas is now at position 0",
  "Pop Question 1",
  "Player Thomas has answered wrongly",
  "player Thomas goes in penalty box !",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 3 !",
  "player Mathieu goes out of penalty box ",
  "player Mathieu is now at position 3",
  "Rock Question 1",
  "Player Mathieu has answered correctly",
  "Player Mathieu goes out of penalty box",
  "Player Mathieu + 1 point now at 1 point(s)",
  "It is Thomas's turn !",
]
`;

exports[`My scenario 4 1`] = `
[
  "Player Mathieu has joined the game at place 0 with 0 point(s)",
  "Player Thomas has joined the game at place 0 with 0 point(s)",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 1",
  "Science Question 0",
  "Player Mathieu + 1 point now at 1 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 1",
  "Science Question 1",
  "Player Thomas + 1 point now at 1 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 2",
  "Sports Question 0",
  "Player Mathieu + 1 point now at 2 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 2",
  "Sports Question 1",
  "Player Thomas + 1 point now at 2 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 3",
  "Rock Question 0",
  "Player Mathieu + 1 point now at 3 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 3",
  "Rock Question 1",
  "Player Thomas + 1 point now at 3 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 4",
  "Pop Question 0",
  "Player Mathieu + 1 point now at 4 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 4",
  "Pop Question 1",
  "Player Thomas + 1 point now at 4 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 5",
  "Science Question 2",
  "Player Mathieu + 1 point now at 5 point(s)",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 5",
  "Science Question 3",
  "Player Thomas + 1 point now at 5 point(s)",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu is now at position 6",
  "Sports Question 2",
  "Player Mathieu has answered wrongly",
  "player Mathieu goes in penalty box !",
  "It is Thomas's turn !",
  "player Thomas has rolled 1 !",
  "player Thomas is now at position 6",
  "Sports Question 3",
  "Player Thomas + 1 point now at 6 point(s)",
  "Player Thomas has won the Game !",
  "It is Mathieu's turn !",
  "player Mathieu has rolled 1 !",
  "player Mathieu goes out of penalty box ",
  "player Mathieu is now at position 7",
  "Rock Question 2",
  "Player Mathieu has answered correctly",
  "Player Mathieu goes out of penalty box",
  "Player Mathieu + 1 point now at 6 point(s)",
  "Player Mathieu has won the Game !",
  "It is Thomas's turn !",
]
`;
